replace png to svg

--- a/package/mtk/applications/mtwifi-cfg/files/wapp/wapp_ap_ra0.conf
+++ b/package/mtk/applications/mtwifi-cfg/files/wapp/wapp_ap_ra0.conf
@@ -200,7 +200,7 @@ venue_url=1,https://venue-server.r2m-testbed.wi-fi.org/floorplans/index.html
 venue_url=1,https://venue-server.r2m-testbed.wi-fi.org/directory/index.html
 
 #Operator icon metadata
-icon_metadata=160:76:eng:image/png:icon_red_eng.png
+icon_metadata=160:76:eng:image/png:icon_red_eng.svg
 
 # NAIRealmData
 nai_realm_data={
@@ -425,8 +425,8 @@ osu_providers_list={
 	osu_friendly_name=kor:SP 레드 시험 만
 	osu_server_uri=https://osu-server.R2-testbed-RKS.wi-fi.org:9443/OnlineSignup/services/
 	osu_method=1
-	icon=128:61:zxx:image/png:icon_red_zxx.png
-	icon=160:76:eng:image/png:icon_red_eng.png
+	icon=128:61:zxx:image/png:icon_red_zxx.svg
+	icon=160:76:eng:image/png:icon_red_eng.svg
 	osu_nai=n/a
 	osu_service_desc=eng:Free service for test purpose
 	osu_service_desc=kor:테스트 목적으로 무료 서비스
